@@ -239,6 +239,7 @@ struct config_file_entry
 	int collision_fnc;
 	int default_umodes;
 	int global_snotices;
+	int hide_opers;
 };
 
 struct config_channel_entry
